# rut

./: .gitignore  Cargo.toml  clean_deploy.sh  deploy.sh  index.html
migrations/: 0001_initial.sql
src/: category.rs  entries.rs  macros.rs  main.rs
