[package]
name = "rut"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { version = "0.10.1", default-features = false }
log = "0.4.20"
rusqlite = { version = "0.30.0", features = ["bundled"] }
rusqlite_migration = "1.1.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
tiny_http = "0.12.0"
ascii = "1.1.0"
base64 = "0.21.5"
sha2 = "0.10.8"
frankenstein = "0.30.0"
